testCases/semanticAnalyzerTestCases/error/badReturnTypes.cs16
/*
    This tests var name
    Author: Chris Kaebe
    Date: March 4, 2016
*/

bool foo(void){
    return 1;
}

int foo(void){
    return true;
}

void boo(int x){
    return x;
}

void moo(void){
    if( true )
        return true;
    else
        return false;
}

void main(void){
    int x;
    if( x = 1 )
        return 1;
    if(x=2) return x;
    if(x=2) return -x;
    if(x=2) return 1;
    if(x=2) return x+1;
    if(x=2) return x+x;
    if(x=2) return x*x;
    if(x=2) return x-x;
    if(x=2) return x;

}